--- a/frontend/src/components/common/Sidebar/Sidebar.css
+++ b/frontend/src/components/common/Sidebar/Sidebar.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     height: 100vh;
-    width: 68px;
+    width: 92px;
     z-index: 100;
     display: flex;
     flex-direction: column;
